syntax = "proto3";

option csharp_namespace = "eShop.ProductAPI";

package ProductAPI;

// The product service definition.
service ProductUser {
  rpc UpdateRetailer (ProductUserRequest) returns (ProductUserResponse);
  rpc UpdateCustomer (ProductUserRequest) returns (ProductUserResponse);
}

message ProductUserResponse {
  string id = 1;
  string name = 2;
}

message ProductUserRequest {
   string id = 1;
   string name = 2;
   bool isDeleted = 3;
}